ecosystem/tree-sitter-lk/grammar.js
    program: $ => repeat(
      choice(
        $.import_statement,
        $.macro_export,
        $.macro_definition,
        $._statement,
      ),
    ),

    // ── Comments ──────────────────────────────────────────────────────
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_-]*/,
    type_identifier: $ => /[a-zA-Z_][a-zA-Z0-9_-]*/,

    // ── Literals ───────────────────────────────────────────────────────
    integer_literal: $ => /[0-9]+/,
    nil_literal: $ => 'nil',

    string_literal: $ => choice(
      $.double_string,
      $.single_string,
      $.raw_string,
    ),

    double_string: $ => seq(
      '"',
      repeat(choice(
        /[^"\\$]+/,
        $.escape_sequence,
        $.string_interpolation,
      )),
      '"',
    ),

    _full_expression: $ => choice(
      $._expression,
      $.ternary_expression,
    ),

    primary_expression: $ => choice(
      $.identifier,
      $.integer_literal,
      $.float_literal,
      $.boolean_literal,
      $.nil_literal,
      $.string_literal,
      $.list_expression,
      $.map_expression,
      $.struct_literal,
      $.parenthesized_expression,
      $.call_expression,
      $.field_access,
      $.index_access,
      $.optional_field_access,
      $.optional_index_access,
      $.unwrap_expression,
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
    ),

    // ── Match ──────────────────────────────────────────────────────────
    pattern: $ => choice(
      $.wildcard_pattern,
      $.literal_pattern,
      $.identifier_pattern,
      $.list_pattern,
      $.map_pattern,
      $.or_pattern,
      $.guarded_pattern,
      $.range_pattern,
    ),

    identifier_pattern: $ => $.identifier,

    _type: $ => choice(
      $.primitive_type,
      $.list_type,
      $.map_type,
      $.function_type,
      $.optional_type,
      $.union_type,
      $.named_type,
      $.type_identifier,
    ),

    primitive_type: $ => choice(
      'Int', 'Float', 'String', 'Bool', 'Nil', 'Any',
      // `Number` is `Int | Float`; `i64`/`f64` are second spellings of
      // `Int`/`Float` — see `TYPE_SPELLINGS` in lk-values. One type, two
      // names: the widthed one for code that is about widths, the plain one
      // for code that is not.
      'Number', 'f64',
      'i8', 'i16', 'i32', 'i64', 'u8', 'u16', 'u32', 'u64', 'isize', 'usize',
    ),

    _statement: $ => choice(
        $.import_statement,
        $.attributed_item,
        $.let_statement,
        $.define_statement,
        $.assignment_statement,
      $.compound_assignment_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
        $.function_definition,
        $.macro_export,
        $.macro_definition,
        $.struct_definition,
        $.type_alias_definition,
        $.trait_definition,
        $.impl_definition,
        $.return_statement,
      $.go_statement,
      $.try_statement,
        $.break_statement,
      $.continue_statement,
      $.expression_statement,
      $.block,
    ),

    attribute: $ => seq(
      '#',
      '[',
      repeat($._macro_token),
      ']',
    ),

    attributed_item: $ => seq(
      repeat1($.attribute),
      choice(
        $.function_definition,
        $.struct_definition,
        $.type_alias_definition,
        $.trait_definition,
        $.impl_definition,
      ),
    ),

    import_statement: $ => choice(
      seq('use', $.identifier, optional(seq('as', $.identifier)), ';'),
      seq('use', $.string_literal, optional(seq('as', $.identifier)), ';'),
      seq('use', '{', $.import_item, repeat(seq(',', $.import_item)), optional(','), '}', 'from', choice($.identifier, $.string_literal), ';'),
      seq('use', '*', 'as', $.identifier, 'from', choice($.identifier, $.string_literal), ';'),
    ),

    macro_export: $ => seq(
      'export',
      '{',
      $.macro_export_item,
      repeat(seq(',', $.macro_export_item)),
      optional(','),
      '}',
      optional(';'),
    ),

    macro_export_item: $ => seq($.identifier, optional(seq('as', $.identifier))),

    macro_definition: $ => seq(
      optional('export'),
      'macro_rules',
      '!',
      field('name', $.identifier),
      $.macro_group,
    ),

    // No static precedence: the `identifier !` prefix is genuinely ambiguous
    // with postfix unwrap (`x!`), so the conflict resolves via GLR — the
    // dynamic precedence picks the macro reading when both parses survive
    // (`name!(...)`), and the unwrap reading wins when the macro's delimiter
    // never appears (`x! + 1`).
    macro_invocation: $ => prec.dynamic(1, seq(
      field('name', $.identifier),
      '!',
      $.macro_group,
    )),

    macro_group: $ => choice(
      seq('(', repeat($._macro_token), ')'),
      seq('{', repeat($._macro_token), '}'),
      seq('[', repeat($._macro_token), ']'),
    ),

    _macro_token: $ => choice(
      $.macro_group,
      $.identifier,
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      'export',
      'macro_rules',
      'true',
      'false',
      'nil',
      '$',
      '#',
      '!',
      ':',
      '::',
      ',',
      ';',
      '.',
      '..',
      '..=',
      '?',
      '=>',
      '->',
      '=',
      '==',
      '!=',
      '<',
      '>',
      '<=',
      '>=',
      '+',
      '-',
      '*',
      '/',
      '%',
      '&',
      '|',
      '&&',
      '||',
    ),

    let_statement: $ => seq(
      'let',
      $.pattern,
      optional(seq(':', $._type)),
      '=',
      $._full_expression,
      ';',
    ),

    function_definition: $ => seq(
      'fn',
      field('name', $.identifier),
      '(',
      optional($.function_params),
      ')',
      optional(seq('->', $._type)),
      $.block,
    ),

    function_params: $ => seq(
      $.parameter,
      repeat(seq(',', $.parameter)),
      optional(','),
      optional(seq(',', $.named_params_block)),
    ),

    struct_definition: $ => seq(
      'struct',
      $.type_identifier,
      '{',
      optional(seq(
        $.struct_field,
        repeat(seq(',', $.struct_field)),
        optional(','),
      )),
      '}',
    ),

    struct_field: $ => seq(
      $.identifier,
      optional(seq(':', $._type)),
    ),

    type_alias_definition: $ => seq(
      'type',
      $.type_identifier,
      '=',
      $._type,
      ';',
    ),

    trait_definition: $ => seq(
      'trait',
      $.type_identifier,
      '{',
      repeat($.trait_method),
      '}',
    ),

    trait_method: $ => seq(
      'fn',
      field('name', $.identifier),
      '(',
      optional($.trait_method_params),
      ')',
      optional(seq('->', $._type)),
      ';',
    ),

    trait_method_params: $ => seq(
      $.trait_method_param,
      repeat(seq(',', $.trait_method_param)),
      optional(','),
    ),

    trait_method_param: $ => seq(
      $.identifier,
      optional(seq(':', $._type)),
    ),

    impl_definition: $ => seq(
      'impl',
      field('trait', $.type_identifier),
      'for',
      field('target', $._type),
      '{',
      repeat($.function_definition),
      '}',
    ),

    return_statement: $ => seq('return', optional($._full_expression), ';'),

    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),
  },
});
